<resources>
    <string name="app_name">SnowMusic</string>

    <string name="snow_music">雪音乐</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <string name="mine">我的</string>
    <string name="discover">发现</string>
    <string name="top">排行榜</string>
    <string name="mv">MV</string>
    <string name="item_local">本地歌曲</string>
    <string name="item_history">播放历史</string>
    <string name="item_favorite">我的收藏</string>
    <string name="item_download">下载</string>
    <string name="item_cached">缓存下载</string>
    <string name="item_cached_music">缓存歌曲</string>
    <string name="item_video">本地视频</string>
    <string name="local_music">本地歌曲</string>
    <string name="song_num">%1$d 首</string>
    <string name="default_num">0 首</string>
    <string name="local_play_list">本地歌单</string>
    <string name="online_list">在线歌单</string>
    <string name="netease_list">网易歌单</string>
    <string name="network_unavailable_tip">网络连接不可用,请检查网络设置!</string>
    <string name="recommend_song">推荐歌曲</string>
    <string name="hot_singer">热门歌手</string>
    <string name="broadcasting">电台</string>
    <string name="look_all">查看全部</string>
    <string name="recommend_song_list">推荐歌单</string>
    <string name="song_list_square">歌单广场</string>
    <string name="mv_recommend">推荐</string>
    <string name="mv_rank">排行榜</string>
    <string name="mv_update_recently">最近更新</string>
    <string name="mv_search">搜索</string>
    <string name="tip_empty_song">空空如也</string>
    <string name="artist_song">歌曲</string>
    <string name="artist_album">专辑</string>
    <string name="artist_detail">详情</string>
    <string name="song">歌曲</string>
    <string name="artist_tips">歌手 - 专辑</string>
    <string name="unknown">未知</string>
    <string name="brief">简介:</string>
    <string name="song_list">歌单</string>
    <string name="play_mode_random">随机播放</string>
    <string name="play_mode_repeat">单曲播放</string>
    <string name="play_mode_loop">顺序播放</string>
    <string name="lrc_label">暂无歌词</string>
    <string name="res_baidu">百度</string>
    <string name="res_qq">QQ</string>
    <string name="res_wangyi">网易云</string>
    <string name="res_xiami">虾米</string>
    <string name="res_local">本地</string>
    <string name="sound_quality_standard">标准</string>
    <string name="sound_quality_high">较高品质</string>
    <string name="sound_quality_hq_high">HQ品质</string>
    <string name="sound_quality_sq_high">无损品质</string>
    <string name="sound_quality">音质</string>
    <string name="sound_effect">音效</string>
    <string name="current_playing">当前播放</string>
    <string name="playlist_queue_clear">清空播放队列?</string>
    <string name="sure">确定</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="cancel">取消</string>
    <string name="single_song">单曲</string>
    <string name="artist">歌手</string>
    <string name="album">专辑</string>
    <string name="folder">文件夹</string>
    <string name="float_lock">桌面歌词已锁定</string>
    <string name="float_unlock">桌面歌词已解除锁定</string>

</resources>
