<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:scrollbars="none"
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:elevation="0dp"
                app:cardCornerRadius="3.5dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                <com.lpc.snowmusic.widget.MyMusicItemView
                        android:background="@drawable/selector_item_click_background"
                        android:id="@+id/localItem"
                        app:item_desc="@string/default_num"
                        android:gravity="center_vertical"
                        app:item_icon="@drawable/item_music"
                        app:item_name="@string/item_local"
                        app:item_icon_color="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"/>

                <com.lpc.snowmusic.widget.MyMusicItemView
                        android:background="@drawable/selector_item_click_background"
                        android:id="@+id/historyItem"
                        app:item_desc="@string/default_num"
                        android:gravity="center_vertical"
                        app:item_icon="@drawable/ic_history_black"
                        app:item_name="@string/item_history"
                        app:item_icon_color="@color/amber"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"/>

                <com.lpc.snowmusic.widget.MyMusicItemView
                        android:background="@drawable/selector_item_click_background"
                        android:id="@+id/favoriteItem"
                        app:item_desc="@string/default_num"
                        android:gravity="center_vertical"
                        app:item_icon="@drawable/item_favorite"
                        app:item_name="@string/item_favorite"
                        app:item_icon_color="@color/lightBlue"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"/>

                <com.lpc.snowmusic.widget.MyMusicItemView
                        android:background="@drawable/selector_item_click_background"
                        android:id="@+id/localMvItem"
                        app:item_desc="@string/default_num"
                        android:gravity="center_vertical"
                        app:item_icon="@drawable/ic_video_library"
                        app:item_name="@string/item_video"
                        app:item_icon_color="@color/lightGreen"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"/>

                <com.lpc.snowmusic.widget.MyMusicItemView
                        android:background="@drawable/selector_item_click_background"
                        android:id="@+id/downloadItem"
                        app:item_desc="@string/default_num"
                        android:gravity="center_vertical"
                        app:item_icon="@drawable/item_download"
                        app:item_name="@string/item_download"
                        app:item_icon_color="@color/color_black"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:minWidth="200dp"
                      android:layout_height="wrap_content">

            <View style="@style/CommonLineStyle"/>

            <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                <RadioGroup
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                    <RadioButton
                            style="@style/RadioButtonSongListStyle"
                            android:text="@string/local_music"/>
                    <RadioButton
                            style="@style/RadioButtonSongListStyle"
                            android:text="@string/online_list"/>
                    <RadioButton
                            style="@style/RadioButtonSongListStyle"
                            android:text="@string/netease_list"/>

                </RadioGroup>

                <ImageView
                        android:layout_margin="15dp"
                        android:src="@drawable/ic_playlist_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <ImageView
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <View style="@style/CommonLineStyle"/>

            <com.classic.common.MultipleStatusView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_song_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.classic.common.MultipleStatusView>

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>