<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.youth.banner.Banner
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"/>

            <LinearLayout
                    android:paddingBottom="10dp"
                    android:padding="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:src="@drawable/ic_hot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_marginTop="10dp"
                            android:text="@string/recommend_song"
                            android:textSize="@dimen/common_text_size"
                            android:textColor="@color/common_black_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:src="@drawable/ic_hot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_marginTop="10dp"
                            android:text="@string/hot_singer"
                            android:textSize="@dimen/common_text_size"
                            android:textColor="@color/common_black_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>


                <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:src="@drawable/ic_supervisor_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_marginTop="10dp"
                            android:text="@string/recommend_song"
                            android:textSize="@dimen/common_text_size"
                            android:textColor="@color/common_black_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>


                <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:src="@drawable/ic_radio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_marginTop="10dp"
                            android:text="@string/recommend_song"
                            android:textSize="@dimen/common_text_size"
                            android:textColor="@color/common_black_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <!--热门歌手-->
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="48dp">

                    <TextView
                            android:layout_weight="1"
                            android:layout_marginLeft="15dp"
                            android:text="@string/hot_singer"
                            android:textColor="@color/common_black_text"
                            android:textSize="@dimen/common_text_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_marginRight="15dp"
                            android:layout_marginLeft="15dp"
                            android:text="@string/look_all"
                            android:textColor="@color/common_black_text"
                            android:textSize="@dimen/common_text_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_hot_singer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <!--推荐歌单-->
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="48dp">

                    <TextView
                            android:layout_weight="1"
                            android:layout_marginLeft="15dp"
                            android:text="@string/recommend_song_list"
                            android:textColor="@color/common_black_text"
                            android:textSize="@dimen/common_text_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:text="@string/recommend_song_list"
                            android:textColor="@color/common_black_text"
                            android:textSize="@dimen/common_text_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <ImageView

                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_navigate_next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_song_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>